[package]
edition = "2021"
name = "classics"
version = "0.1.0"

[dependencies]
flate2 = "1"
half = "2"
internment = { version = "0.8", features = ["serde"] }
parking_lot = "0.12.1"
rand = "0.8"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tokio = {version = "1", features = ["full"]}
