[package]
edition = "2021"
name = "classics"
version = "0.1.0"

[dependencies]
bincode = "2.0.0-rc.3"
bytes = "1"
flate2 = "1"
half = "2"
internment = {version = "0.8", features = ["serde"]}
optional_struct = "0.4"
parking_lot = "0.12"
rand = "0.8"
safer-bytes = "0.2"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tokio = {version = "1", features = ["full"]}
