[package]
edition = "2021"
name = "classics"
version = "0.1.0"

[dependencies]
bincode = "2.0.0-rc.3"
bitmask-enum = "2"
bytes = "1"
flate2 = "1"
half = "2"
internment = {version = "0.8", features = ["serde"]}
nanoid = "0.4"
optional_struct = "0.4"
parking_lot = "0.12"
rand = "0.8"
safer-bytes = "0.2"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
strum = { version = "0.26", features = ["derive"] }
thiserror = "1"
tokio = {version = "1", features = ["full"]}
