[package]
name = "internal"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_reflect = "0.18"
bitmask-enum = "2"
flate2 = "1"
half = "2"
internment = "0.8"
safer-bytes = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2"
tokio = "1"
