[package]
edition = "2021"
name = "classics"
version = "0.1.0"

[dependencies]
bevy_reflect = "0.18"
bincode = "2"
bitmask-enum = "2"
bytes = "1"
flate2 = "1"
half = { version = "2", features = ["serde"] }
internment = { version = "0.8", features = ["serde"] }
nanoid = "0.4"
optional_struct = "0.5"
parking_lot = "0.12"
rand = "0.9"
safer-bytes = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
internal = { path = "../internal" }
